--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,3 +189,11 @@ body {
 .user-row .col h4 {
     display: inline;
 }
+
+.pub-year{
+    padding-top: 70px;
+}
+/*.tab-pane-border{*/
+    /*border: */
+
+/*}*/
