--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -66,14 +66,16 @@
         Ukraine and the Russian Federation, which have been reviewed by the Pathology Panel and a consensus
         diagnosis agreed; the number of cases for which frozen material is available is given in brackets.
     </p>
-    <table border="0">
-        <tbody>
+    <table class="table table-striped mb-5">
+        <thead>
         <tr>
             <th>Diagnosis</th>
             <th colspan="2">Ukraine</th>
             <th colspan="2">Russia</th>
             <th colspan="2">Total</th>
         </tr>
+        </thead>
+        <tbody>
         <tr>
             <td>Papillary Carcinoma (incl micro PTC)</td>
             <td>2438</td>
