--- a/templates/ctb/research_projects_2001_2009.html
+++ b/templates/ctb/research_projects_2001_2009.html
@@ -30,56 +30,58 @@
 {% endblock %}
 
 {% block subcontent %}
-    <h4>Approved projects</h4>
-    <ol>
-        <li><a href="#01">Expression profiling of tyrosine kinase genes in malignant tumours of the <br>thyroid
-            gland.</a></li>
-        <li><a href="#02">Chernobyl, an Integrated Pan-European Study, morphology, oncogenes, DNA repair and
-            outcome in radiation carcinogenesis.</a></li>
-        <li><a href="#04">RET proto-oncogene rearrangements and tyrosine kinase gene expression in radiation
-            induced papillary thyroid carcinomas developed after the Chernobyl accident.</a></li>
-        <li><a href="#05">Mitochondrial DNA deletions and mutations in post Chernobyl thyroid tumours and in
-            the respective normal thyroid parenchyma.</a></li>
-        <li><a href="#07">Expression of the RET proto-oncogene in post-Chernobyl thyroid tumors and
-            unirradiated controls: analysis of RET/PTC rearrangements, RET wild type and RET-TK domain, with
-            quantitative assessment of mRNA and protein expression.</a></li>
-        <li><a href="#0102">Analysis of RET/PTC transforming ability in Thyroid cells using Oligonucleotide
-            DNA Micro Array</a></li>
-        <li><a href="#0202">A Comprehensive Molecular Profile of ChildhoodRadiation Induced Papillary
-            Thyroid Tumors Compared to Adult Sporadic Papillary Tumors</a></li>
-        <li><a href="#0103">A comprehensive analysis to find out molecular biomarker(s) of radiation
-            exposure and grade of malignancy in human post-Chernobyl PTC </a></li>
-        <li><a href="#0203">Molecular Change and Thyroid Cancer Risk after Chernobyl </a></li>
-        <li><a href="#0104">Analysis of Genetic and Epigenetic Abnormalities in Radiation-induced Thyroid
-            Cancers</a></li>
-        <li><a href="#0204">Investigation of molecular genetic abnormalities associated with progression of
-            human thyroid follicular neoplasms</a></li>
-        <li><a href="#0304">Molecular Definition of Gene Expression in Chernobyl Thyroid Cancers</a></li>
-        <li><a href="#0105">Genomic Analysis of Gene Copy Number in Thyroid Cancer</a></li>
-        <li><a href="#0205">The influence of genetic variation in DNA repair pathways on cancer risk
-            following exposure to ionising radiation</a></li>
-        <li><a href="#0107">Array CGH analysis of RET/PTC-positive and RET/PTC-negative post-Chernobyl
-            thyroid tumours</a></li>
-        <li><a href="#0207">Expression profiling of childhood thyroid cancer: a comparison of those exposed
-            to radioiodine and those exposed to low level radiocaesium</a></li>
-        <li><a href="#0307">Gene expression in normal and cancerous tissue in relation to I-131 exposure</a>
-        </li>
-        <li><a href="#0407">Genetic predisposition to radiation-induced carcinogenesis and to specific
-            genetic alterations in post-Chernobyl thyroid cancer.</a></li>
-        <li><a href="#0108">Genrisk-T defining the risk of low dose radiation for thyroid cancer the role of
-            germline SNPs.</a></li>
-        <li><a href="#0022008">Expression profiling of childhood follicular tumours: a comparison of those
-            exposed and not exposed to radiation. Defining the genetic component of thyroid cancer risk at
-            low doses.</a></li>
-        <li><a href="#0032008">Array CGH analysis of follicular post-Chernobyl thyroid tumours</a></li>
-        <li><a href="#001009">Defining the genetic component of thyroid cancer risk at low doses request for
-            RNA aliquots for QPCR validation and for the exon arrays.</a></li>
-        <li><a href="#0022009">Identification of somatically acquired rearrangements in post-Chernobyl
-            pediatric thyroid cancers using genome-wide massively parallel paired-end sequencing</a></li>
-        <li><a href="#0032009">miRNA profiles in childhood thyroid cancer</a></li>
-        <li><a href="#0207-1">Validation of statistical and bioinformatics technologies to allow integration
-            of Next generation RNA Sequencing and microarray data</a></li>
-    </ol>
+    <div class="rounded bg-light p-3 mb-2">
+        <h4>Approved projects</h4>
+        <ol>
+            <li><a href="#01">Expression profiling of tyrosine kinase genes in malignant tumours of the <br>thyroid
+                gland.</a></li>
+            <li><a href="#02">Chernobyl, an Integrated Pan-European Study, morphology, oncogenes, DNA repair and
+                outcome in radiation carcinogenesis.</a></li>
+            <li><a href="#04">RET proto-oncogene rearrangements and tyrosine kinase gene expression in radiation
+                induced papillary thyroid carcinomas developed after the Chernobyl accident.</a></li>
+            <li><a href="#05">Mitochondrial DNA deletions and mutations in post Chernobyl thyroid tumours and in
+                the respective normal thyroid parenchyma.</a></li>
+            <li><a href="#07">Expression of the RET proto-oncogene in post-Chernobyl thyroid tumors and
+                unirradiated controls: analysis of RET/PTC rearrangements, RET wild type and RET-TK domain, with
+                quantitative assessment of mRNA and protein expression.</a></li>
+            <li><a href="#0102">Analysis of RET/PTC transforming ability in Thyroid cells using Oligonucleotide
+                DNA Micro Array</a></li>
+            <li><a href="#0202">A Comprehensive Molecular Profile of ChildhoodRadiation Induced Papillary
+                Thyroid Tumors Compared to Adult Sporadic Papillary Tumors</a></li>
+            <li><a href="#0103">A comprehensive analysis to find out molecular biomarker(s) of radiation
+                exposure and grade of malignancy in human post-Chernobyl PTC </a></li>
+            <li><a href="#0203">Molecular Change and Thyroid Cancer Risk after Chernobyl </a></li>
+            <li><a href="#0104">Analysis of Genetic and Epigenetic Abnormalities in Radiation-induced Thyroid
+                Cancers</a></li>
+            <li><a href="#0204">Investigation of molecular genetic abnormalities associated with progression of
+                human thyroid follicular neoplasms</a></li>
+            <li><a href="#0304">Molecular Definition of Gene Expression in Chernobyl Thyroid Cancers</a></li>
+            <li><a href="#0105">Genomic Analysis of Gene Copy Number in Thyroid Cancer</a></li>
+            <li><a href="#0205">The influence of genetic variation in DNA repair pathways on cancer risk
+                following exposure to ionising radiation</a></li>
+            <li><a href="#0107">Array CGH analysis of RET/PTC-positive and RET/PTC-negative post-Chernobyl
+                thyroid tumours</a></li>
+            <li><a href="#0207">Expression profiling of childhood thyroid cancer: a comparison of those exposed
+                to radioiodine and those exposed to low level radiocaesium</a></li>
+            <li><a href="#0307">Gene expression in normal and cancerous tissue in relation to I-131 exposure</a>
+            </li>
+            <li><a href="#0407">Genetic predisposition to radiation-induced carcinogenesis and to specific
+                genetic alterations in post-Chernobyl thyroid cancer.</a></li>
+            <li><a href="#0108">Genrisk-T defining the risk of low dose radiation for thyroid cancer the role of
+                germline SNPs.</a></li>
+            <li><a href="#0022008">Expression profiling of childhood follicular tumours: a comparison of those
+                exposed and not exposed to radiation. Defining the genetic component of thyroid cancer risk at
+                low doses.</a></li>
+            <li><a href="#0032008">Array CGH analysis of follicular post-Chernobyl thyroid tumours</a></li>
+            <li><a href="#001009">Defining the genetic component of thyroid cancer risk at low doses request for
+                RNA aliquots for QPCR validation and for the exon arrays.</a></li>
+            <li><a href="#0022009">Identification of somatically acquired rearrangements in post-Chernobyl
+                pediatric thyroid cancers using genome-wide massively parallel paired-end sequencing</a></li>
+            <li><a href="#0032009">miRNA profiles in childhood thyroid cancer</a></li>
+            <li><a href="#0207-1">Validation of statistical and bioinformatics technologies to allow integration
+                of Next generation RNA Sequencing and microarray data</a></li>
+        </ol>
+    </div>
     <h5><a id="01"></a>Project reference number 001/2001</h5>
     <p>Principal Investigator:Dr Heinz-Ulrich Weier, LBNL, University of California, Berkeley Email: <a
             href="mailto:ugweier@lbl.gov">ugweier@lbl.gov</a></p>
