--- a/templates/ctb/research_projects_2010_2019.html
+++ b/templates/ctb/research_projects_2010_2019.html
@@ -30,30 +30,31 @@
 {% endblock %}
 
 {% block subcontent %}
-    <h4><a id="top"></a>Approved projects</h4>
-    <ol class="toc">
-        <li><a href="#study0012011">EpiRadBio</a></li>
-        <li><a href="#study0022011">Molecular specificities of radiation-induced thyroid tumors</a></li>
-        <li><a href="#study0032011">EpiRadBio - Validation of radiation-associated gain of chromosome band
-            7q11</a></li>
-        <li><a href="#study0042011">A Sequence-based Approach to Identify Genetic Determinants of
-            Tumorigenesis in Radiation-Induced Pediatric Papillary Thyroid Carcinomas</a></li>
-        <li><a href="#study0012012">EpiRadBio - integrative analysis of molecular data</a></li>
-        <li><a href="#study0022012">Validation of the gene signature differentiating exposed from
-            non-exposed PTCs, obtained in the Genrisk-T project (no.: 036495) with an independent QPCR
-            method</a></li>
-        <li><a href="#study-0012013">A detailed study of the somatic genomics of radiation induced thyroid
-            cancer</a></li>
-        <li><a href="#study-0012014">Assessing the impact of radiation exposure on the development of
-            medullary thyroid carcinoma</a></li>
-        <li><a href="#study-0022014">Anaplastic lymphoma kinase (ALK) rearrangements in radiation-induced
-            papillary thyroid carcinomas: a study on post Chernobyl tissue samples</a></li>
-        <li><a href="#study-0032014">Comprehensive Genomic Characterization of Radiation-Related Thyroid
-            Cancer in Ukraine</a></li>
-        <li><a href="#study0012015">Liquid biopsy in assessment of radio-induced thyroid cancer in children
-            and young adults</a></li>
-    </ol>
-    <p>&nbsp;</p>
+    <div class="rounded bg-light p-3 mb-2">
+        <h4><a id="top"></a>Approved projects</h4>
+        <ol class="toc">
+            <li><a href="#study0012011">EpiRadBio</a></li>
+            <li><a href="#study0022011">Molecular specificities of radiation-induced thyroid tumors</a></li>
+            <li><a href="#study0032011">EpiRadBio - Validation of radiation-associated gain of chromosome band
+                7q11</a></li>
+            <li><a href="#study0042011">A Sequence-based Approach to Identify Genetic Determinants of
+                Tumorigenesis in Radiation-Induced Pediatric Papillary Thyroid Carcinomas</a></li>
+            <li><a href="#study0012012">EpiRadBio - integrative analysis of molecular data</a></li>
+            <li><a href="#study0022012">Validation of the gene signature differentiating exposed from
+                non-exposed PTCs, obtained in the Genrisk-T project (no.: 036495) with an independent QPCR
+                method</a></li>
+            <li><a href="#study-0012013">A detailed study of the somatic genomics of radiation induced thyroid
+                cancer</a></li>
+            <li><a href="#study-0012014">Assessing the impact of radiation exposure on the development of
+                medullary thyroid carcinoma</a></li>
+            <li><a href="#study-0022014">Anaplastic lymphoma kinase (ALK) rearrangements in radiation-induced
+                papillary thyroid carcinomas: a study on post Chernobyl tissue samples</a></li>
+            <li><a href="#study-0032014">Comprehensive Genomic Characterization of Radiation-Related Thyroid
+                Cancer in Ukraine</a></li>
+            <li><a href="#study0012015">Liquid biopsy in assessment of radio-induced thyroid cancer in children
+                and young adults</a></li>
+        </ol>
+    </div>
     <p><strong><a name="study0012011"></a>Project reference number: 001/2011</strong></p>
     <p>Principal Investigator: Dr K Unger, Helmholtz Centre, Munich, Germany</p>
     <p class="bodytext">Email: <a
