--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -28,28 +28,72 @@
 {% endblock %}
 
 {% block subcontent %}
-    <p><strong>The CTB (Chernobyl Tissue Bank) is a unique venture. It is the first international
-        cooperation that seeks to establish a collection of biological samples from tumours and normal
-        tissues from patients for whom the aetiology of their disease is known - exposure to radioiodine in
-        childhood.</strong></p>
-    <p>The project, which started in October 1998, has been supported by a number of sponsors including the
-        European Commission, the WHO, the National Cancer Institute (NCI) of the USA and the Sasakawa Health
-        Foundation of Japan (SHF). The project is currently jointly funded by the NCI and the SHF.</p>
-    <p>The project is coordinated from Imperial College, London and works with Institutes in the Russian
-        Federation (the Medical Radiological Research Centre in Obninsk) and Ukraine (the Institute of
-        Endocrinology and Metabolism in Kiev) to support local scientists and clinicians to manage and run a
-        tissue bank for those patients who have developed thyroid tumours following exposure to radiation
-        from the Chernobyl accident. Belarus was also initially included in the project, but is currently
-        suspended for political reasons.</p>
-    <p>The project has the full support of the Governments of the Russian Federation and Ukraine.</p>
-    <p>The large number of thyroid tumours that have occurred in areas exposed to high levels of fallout
-        from the Chernobyl accident raises important problems in the areas of public health, regulation of
-        exposure to radionuclides and in the understanding of the molecular changes involved in their
-        genesis. The over-riding priority must go to matters such as diagnosis, treatment of those affected,
-        and prevention. International Agencies have given and are giving financial and material help in
-        these areas.</p>
-    <p>However, providing the needs of the patient are not compromised, it is very important to ensure that
-        information that may be of value to the health of future generations is not lost. Although the post
-        Chernobyl thyroid tumours are associated with a particular aetiology, they may also provide clues to
-        the pathogenesis and molecular biology of thyroid carcinoma in general.</p>
+    <p><strong>The main objective of this project is to provide a research resource for both ongoing and future
+        studies of the health consequences of the Chernobyl accident.</strong></p>
+    <p>It seeks to maximize the amount of information obtained from small pieces of tumour by providing multiple
+        aliquots of RNA and DNA extracted from well documented pathological specimens to a number of researchers
+        world-wide and to conserve this valuable material for future generations of scientists. It exists to promote
+        collaborative, rather than competitive, research on a limited biological resource.</p>
+    <h5>The project:</h5>
+    <ul>
+        <li>ensures that the best possible diagnostic service is provided to patients and that appropriate ethical
+            consent is obtained for each biological sample
+        </li>
+        <li>ensures that specimens of thyroid cancer operated on or after 1st October 1998 (the start date of the
+            project) are properly described and sampled, and that materials (frozen tissue, fixed tissue sections,
+            extracted DNA/RNA and blood samples), are available for appropriate research studies
+        </li>
+        <li>provides a diagnosis agreed by internationally recognized pathologists. The diagnosis is made available
+            to research groups carrying out molecular biological, therapeutic, epidemiological and other studies
+        </li>
+        <li>provides an archive of data generated from research studies carried out using the material that can be
+            used for future studies on the interaction of specific oncogenic changes in the generation of radiation
+            related thyroid cancer. This may have direct relevance to both prognosis and assessment of risk from
+            exposure to radiation
+        </li>
+    </ul>
+    <p>The project is already achieving the first three objectives above, but continued collection of material is
+        necessary for a number of reasons. There is evidence that suggests that tumours following a short latency
+        are likely to show a different molecular biological and pathological profile than those of a longer latency;
+        this project will help to clarify this difference as the latent period since the accident increases. Thyroid
+        cancer is increasing world-wide and although most tumours do not have a defined radiation aetiology, it is
+        likely that the insights gained from studying the post Chernobyl tumours will provide information that could
+        be of use for the diagnosis and treatment of thyroid cancer and of other cancers in general.</p>
+    <p class="bodytext"><strong>What happens to the results of the research studies?&nbsp;</strong><br>Researchers
+        who obtain material from the CTB agree to provide the results of their investigation on a case-by-case
+        basis. This information will not be used until after the researchers have published their findings, but it
+        will allow the results of all of the studies to be correlated at a later date, so that, for example, the
+        investigations by different groups of a number of different genes can be correlated to study their
+        interactions. The provision of extracted nucleic acid from thyroid tissue, rather than each researcher being
+        provided with a small piece of tissue maximises the amount of data that can potentially be obtained from a
+        single operative specimen and will enable multiple molecular biological studies to be carried out for each
+        case.&nbsp;</p>
+    <p class="bodytext">The CTB biosample search facility allows researchers wishing to access biomaterials to
+        select those cases from which they would wish to receive samples. This search facility will be expanded over
+        the next few months to include the ability to refine searches using clinical information and information on
+        driver mutations obtained from research projects using the resource.&nbsp;<br><br><strong>Where is the CTB
+            located?<br></strong>The tissue banks are situated in two of the countries most exposed to fallout from
+        Chernobyl; one at the Institute of Endocrinology and Metabolism in Kiev, Ukraine and one at the Ministry of
+        Health of the Russian Federation, A. Tsyb Medical Radiological Research Center in Obninsk, in the Russian
+        Federation. Each bank consents patients and prepares and stores material from its own population.
+        Historically each centre maintained its own database of samples and data was shared with an integrated
+        database maintained at the Coordinating Centre at Imperial College, London. Today, each institute logs cases
+        centrally via a web interface into a bespoke samples database. Key information is therefore available to
+        researchers wishing to use the tissue banks and each institute has access to the complete data from its own
+        population at any time.&nbsp;</p>
+    <p class="bodytext"><strong>Study cohort</strong><br>The CTB includes material and information from all patients
+        with thyroid carcinomas and cellular follicular adenomas from the contaminated oblasts of the Russian
+        Federation (Bryansk, Kaluga, Tula and Oryol) and Ukraine (Kiev, Kiev city, Cherkasse, Chernigov, Rovno,
+        Zhitomyr and Sumy) who were born after 26th April 1967 (i.e. aged under 19 at the time of the Chernobyl
+        accident) and operated on or after the 1st October 1998. Detailed standard operating procedures for the
+        collection and documentation of specimens and blood samples have been agreed with professional staff
+        involved in the collection of material, and ethical standards agreed upon with the relevant authorities,
+        conforming to the requirements of each country involved, including those of the funding organisations.</p>
+    <p class="bodytext">Each specimen is given a code authorized by the appropriate person responsible for the
+        management of the resource in each of the three countries. The age, sex, age at operation, oblast and
+        country of residence, and a measured or calculated dose received are recorded for each specimen stored in
+        the CTB, and are made available to researchers with approved projects receiving material from the bank. All
+        data accessible by researchers is anonymised. Each anonymised specimen is assigned a tissue bank reference
+        number by the institute in Ukraine and Russia and all data accessible by researchers is identified by this
+        reference number.&nbsp;</p>
 {% endblock %}
