--- a/templates/ctb/news.html
+++ b/templates/ctb/news.html
@@ -14,25 +14,23 @@
 {% block page_header %}
     <div class="container">
         <h3 class="page-banner">Latest News</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Latest News</li>
-                </ol>
-            </nav>
-        </div>
+{#        <div>#}
+{#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
+{#                <ol class="breadcrumb">#}
+{#                    <li class="breadcrumb-item active" aria-current="page">Latest News</li>#}
+{#                </ol>#}
+{#            </nav>#}
+{#        </div>#}
     </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div id="news">
-{#                <div class="row">#}
                 <div class="row row-cols-2 row-cols-md-3 g-4">
                     <div class="col">
-{#                    <div class="col-lg-4 col-md-6 pb-4">#}
                         <div class="card">
                             <a href="news.htm?id=1" class="card__img-link">
                                 <img src="{% static 'img/newsreactorsite.jpeg' %}" class="card-img-top"
@@ -54,7 +52,6 @@
                         </div>
                     </div>
                     <div class="col">
-{#                    <div class="col-lg-4 col-md-6 pb-4">#}
                         <div class="card">
                             <a href="news.htm?id=2" class="card__img-link"><img
                                     src="{% static 'img/newslandscape.jpeg' %}"
@@ -77,14 +74,6 @@
                     </div>
                 </div>
             </div>
-            <div class="container content__section">
-                <div class="row">
-
-                    <!-- No widget found "bottom" -->
-                </div>
-            </div>
-
-
         </div>
     </div>
 {% endblock %}
