--- a/templates/ctb/resources.html
+++ b/templates/ctb/resources.html
@@ -1,14 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
-
             <div class="col-md-9 pb-4">
                 {% block subcontent %}
                 {% endblock %}
             </div>
-
             <div class="col-md-3 pb-4">
                 <ul class="side-navigation">
                     <li class="side-navigation__item  side-navigation__link--active ">
@@ -28,7 +26,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </div>
 {% endblock %}
