--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="footer mt-auto py-3 text-center ">
+<footer class="footer mt-auto py-1 bg-light text-center ">
     <div class="container py-2">
         {#    text-lg-start fixed-bottom#}
         <div class="py-1">
