--- a/templates/ctb/research_projects_2010_2019.html
+++ b/templates/ctb/research_projects_2010_2019.html
@@ -55,7 +55,7 @@
                 and young adults</a></li>
         </ol>
     </div>
-    <p><strong><a name="study0012011"></a>Project reference number: 001/2011</strong></p>
+    <div class="fw-bold anchor-section mt-5" id="study0012011">Project reference number: 001/2011</div>
     <p>Principal Investigator: Dr K Unger, Helmholtz Centre, Munich, Germany</p>
     <p class="bodytext">Email: <a
             href="mailto:unger@helmholtz-muenchen.de">unger@helmholtz-muenchen.de</a><br><br><em>EpiRadiBio</em><br><br>Summary
@@ -75,9 +75,11 @@
         identify a potential relationship between the radiation-associated biomarker and radiation dose. The
         resulting data will be provided to the modellers of the project who will use this information to
         build and refine their models on radiation risk of papillary thyroid cancer after exposure to
-        low-dose ionising radiation.<br><br><a href="#">Go to top</a></p>
-    <p class="bodytext"><br><strong><a name="study0022011"></a>Project reference number:
-        002/2011</strong><br>Principal Investigator: Dr C Ory, Commissariat Energie Atomique, Departement
+        low-dose ionising radiation.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study0022011">Project reference number:
+        002/2011
+    </div>
+    <p>Principal Investigator: Dr C Ory, Commissariat Energie Atomique, Departement
         Sciences du vivant, Institut de radiobiologie cellulaire et moleculaire, Laboratoire de Cancerologie
         Experimentale (CEA), France <br><br>Email: <a
                 href="mailto:catherine.ory@cea.fr">catherine.ory@cea.fr</a><br><br><em>Molecular
@@ -93,10 +95,10 @@
         deregulated pathway identified by the transcriptomic approach. To date, no such integrated analysis
         has been performed as most of the studies focused on either transcriptome analysis or miRNA analysis
         separately. Ultimately, we will cross the obtained data with others results from analysis of
-        post-radiotherapy tumors (Ory et al. 2011; Ugolin et al. PLosONE under revision).<br><br><a
+        post-radiotherapy tumors (Ory et al. 2011; Ugolin et al. PLosONE under revision).<br><a
                 href="#">Go to top</a></p>
-    <p class="bodytext"><br><strong><a name="study0032011"></a>Project reference number:
-        003/2011</strong><br>Principal Investigator: Dr K Unger, Helmholtz Centre, Munich, Germany<br><br>Email:
+    <div class="fw-bold anchor-section mt-5" id="study0032011">Project reference number: 003/2011</div>
+    <p>Principal Investigator: Dr K Unger, Helmholtz Centre, Munich, Germany<br><br>Email:
         <a href="mailto:unger@helmholtz-muenchen.de">unger@helmholtz-muenchen.de</a><br><br><em>EpiRadBio -
             Validation of radiation-associated gain of chromosome band 7q11</em><br><br>Summary of
         project:<br><br>The project using the applied biomaterial is an extension of the EU-funded GENRISK-T
@@ -114,9 +116,11 @@
         results will be used to identify the dysregulation networks in which CLIP2 is specifically involved.
         The projects aims to validate the radiation marker on chromosome band 7q11, to identify the networks
         that are dysregulated in tumours harbouring the marker and to find new markers that are associated
-        with exposure to radiation.<br><br><a href="#">Go to top</a></p>
-    <p class="bodytext"><br><strong><a name="study0042011"></a>Project reference number:
-        004/2011</strong><br>Principal Investigator: Dr L Hawthorn, Georgia Health Sciences University,
+        with exposure to radiation.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study0042011">Project reference number:
+        004/2011
+    </div>
+    <p>Principal Investigator: Dr L Hawthorn, Georgia Health Sciences University,
         USA<br><br>Email: <a href="mailto:lhawthorn@georgiahealth.edu" target="_blank" rel="noopener">lhawthorn@georgiahealth.edu</a><br><br><em>A
             Sequence-based Approach to Identify Genetic Determinants of Tumorigenesis in Radiation-Induced
             Pediatric Papillary Thyroid Carcinomas</em><br><br>Summary of project:<br><br>Cancer is a
@@ -131,10 +135,12 @@
         genes and the expression of aberrant genes, and gene fusion products. This data will be compared to
         RIP-PTC in age matched patients who were not exposed to radiation to develop a radiation-specific
         profile. We have bioinformatic specialists in the group who will integrate these various kinds of
-        data. This study will provide a comprehensive profile of RIP-PTC.<br><br><a
+        data. This study will provide a comprehensive profile of RIP-PTC.<br><a
                 href="#">Go to top</a></p>
-    <p class="bodytext"><br><strong><a name="study0012012"></a>Project reference number:
-        001/2012</strong><br>Principal Investigator: Dr W van Wieringen, VU University Medical Centre,
+    <div class="fw-bold anchor-section mt-5" id="study0012012">Project reference number:
+        001/2012
+    </div>
+    <p>Principal Investigator: Dr W van Wieringen, VU University Medical Centre,
         Amsterdam, The Netherlands<br><br>Email: <a
                 href="mailto:w.vanwieringen@vumc.nl">w.vanwieringen@vumc.nl</a><br><br><em>EpiRadBio
             integrative analysis of molecular data</em><br><br>Summary of project:<br><br>Within the scope
@@ -152,8 +158,9 @@
         unambiguously and to interpret genotype information. This should enhance the understanding of what
         distinguishes the exposed from the non-exposed thyroid cancers. In addition, the biological insight
         these models provide is likely to result in more targeted follow-up experiments and efficient use of
-        available resources.<br><br><a href="#">Go to top</a></p>
-    <p class="bodytext"><strong><a name="study0022012"></a>Project reference number: 002/2012</strong><br>Principal
+        available resources.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study0022012">Project reference number: 002/2012</div>
+    <p>Principal
         Investigator: Professor B Jarzab, Maria Sklodowska-Curie Memorial Cancer Centre and Institute of
         Oncology, Gliwice, Poland<br><br>Email: <a
                 href="mailto:bjarzab@io.gliwice.pl">bjarzab@io.gliwice.pl</a><br><br><em>Validation of the
@@ -165,9 +172,10 @@
         that are carry on to investigate the transcriptomic and genetic profile of radiation induced thyroid
         cancer.<br>As a first step of the study Affimetrix microarray technology was employed to define
         transcriptomic profiles in two cohorts of children matched on age, oblast and pathological type of
-        tumour. At present we want to validate the results with qPCR.<br><br><a
+        tumour. At present we want to validate the results with qPCR.<br><a
                 href="#">Go to top</a></p>
-    <p><strong><a name="study-0012013"></a>Project reference number 001/2013<br></strong>Principal
+    <div class="fw-bold anchor-section mt-5" id="study-0012013">Project reference number 001/2013</div>
+    <p>Principal
         investigator: Professor GA Thomas, Imperial College, London</p>
     <p>E-mail: <a href="mailto:geraldine.thomas@imperial.ac.uk">geraldine.thomas@imperial.ac.uk</a></p>
     <p><em>A detailed study of the somatic genomics of radiation induced thyroid cancer</em></p>
@@ -180,9 +188,10 @@
         in the DNA that occur simultaneously rather than sequentially. The aim of this study is to use whole
         genome sequencing to identify novel mutations in radiation induced thyroid cancer, to identify
         changes in the mitochondrial genome and to investigate the frequency of chromothripsis in childhood
-        thyroid cancer, especially with respect to radiation exposure.</p>
-    <p class="bodytext"><a href="#">Go to top</a></p>
-    <p><strong><a name="study-0012014"></a>Project reference number: 001/2014<br></strong>Principal
+        thyroid cancer, especially with respect to radiation exposure.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study-0012014">Project reference number: 001/2014</div>
+    <p>
+        Principal
         investigator: Dr Elizabeth Grubbs, Department Surgical Oncology, MD Anderson Cancer Center, Houston,
         USA</p>
     <p>E-mail: <a href="mailto:eggrubbs@mdanderson.org">eggrubbs@mdanderson.org</a></p>
@@ -200,10 +209,9 @@
         MTC is a hereditary condition in 25% of cases, we would also like to assess whether there could be a
         hereditary cause to MTC in this small geographic region. Such data will give us an insight into the
         mechanisms in which tumors are formed in MTC and potentially help us target ways to stop these
-        tumors.</p>
-    <p><a href="#">Go to top</a></p>
-    <p><strong><a name="study-0022014"></a>Project reference number 002/2014<br></strong>Principal
-        Investigator: Mr S Eder, Bundeswehr Institute of Radiobiology, Munich Germany</p>
+        tumors.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study-0022014">Project reference number 002/2014</div><p>Principal
+    Investigator: Mr S Eder, Bundeswehr Institute of Radiobiology, Munich Germany</p>
     <p>E-mail: <a href="mailto:stefanfriedricheder@bundeswehr.org">stefanfriedricheder@bundeswehr.org</a>
     </p>
     <p><em>Anaplastic lymphoma kinase (ALK) rearrangements in radiation-induced papillary thyroid
@@ -223,9 +231,9 @@
         ALK rearrangements in PTC biospecimens from patients exposed to radioiodine in the context of the
         Chernobyl accident as well as in a control cohort of sporadic PTCs, performing fluorescence in situ
         hybridization (FISH) analyses. Furthermore, we intend to assess the mutation status of commonly
-        altered oncogenes in PTC, such as BRAF or RAS, using pyrosequencing.</p>
-    <p><a href="#">Go to top</a></p>
-    <p><strong><a name="study-0032014"></a>Project reference number 003/2014<br></strong>Principal
+        altered oncogenes in PTC, such as BRAF or RAS, using pyrosequencing.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study-0032014">Project reference number 003/2014</div>
+    <p>Principal
         Investigator: Dr S Channock, Division of Cancer Epidemiology and Genetics, National Cancer
         Institute, USA</p>
     <p>E-mail: <a href="mailto:chanocks@mail.nih.gov">chanocks@mail.nih.gov</a></p>
@@ -255,9 +263,9 @@
         of I-131 exposure as well as a comparison with approximately 500 sporadic PTCs available from The
         Cancer Genome Atlas recently published in Cell. The proposed study has the potential to provide
         unique insights into the mechanisms of radiation carcinogenesis and to generate a rich data resource
-        accessible to other investigators.</p>
-    <p><a href="#">Go to top</a></p>
-    <p><strong><strong><a name="study0012015"></a>Project reference number: 001/2018<br></strong></strong>Principal
+        accessible to other investigators.<br><a href="#">Go to top</a></p>
+    <div class="fw-bold anchor-section mt-5" id="study0012015">Project reference number: 001/2018</div>
+    <p>Principal
         Investigator: Dr Kirk Jensen, Department of Pediatrics, Uniformed Services University of the Health
         Sciences, Bethesda, Maryland, USA</p>
     <p>E-mail: <a href="mailto:kirk.jensen@usuhs.edu">kirk.jensen@usuhs.edu</a></p>
