--- a/templates/404.html
+++ b/templates/404.html
@@ -23,12 +23,12 @@
 {% block title %}Page not found{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
+    <div class="row justify-content-center my-5">
         <div class="col-lg-4 accounts-col">
-            <div class="card">
+            <div class="card p-3">
                 <div class="card-body">
-                    <h1 class="card-title">{% trans "Not Found" %}</h1>
-                    <h4>404: The requested page could not be found.</h4>
+                    <h4 class="card-title"><i class="fas fa-exclamation-triangle"></i> {% trans "404: Page Not Found" %}</h4>
+                    <h5>The requested page could not be found.</h5>
                 </div>
             </div>
         </div>
