--- a/templates/ctb/dashboard.html
+++ b/templates/ctb/dashboard.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container pt-3">
+    <div class="container py-3">
         <div class="row">
             <div class="col-4">
                 <div class="bg-light border rounded p-3">
