--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -156,7 +156,7 @@
         and therefore exposed to radioiodine at 3 months of intrauterine age or older. A total of 17% were
         born after 1<sup>st</sup> December 1986 and therefore not exposed to radioiodine in fallout.</p>
     <p><strong>More information:</strong></p>
-    <p><a href="/nucleic-acids-and-paraffin-secretions.htm">Aliquots of nucleic acid</a><br><a
-            href="/nucleic-acids-and-paraffin-secretions.htm">Paraffin sections</a> <br><a
-            href="/tissue-microarrays.htm">Tissue Micro Arrays</a></p>
+    <p><a href="{% url 'nucleic_acids_and_paraffin_sections' %}">Aliquots of nucleic acid</a><br><a
+            href="{% url 'nucleic_acids_and_paraffin_sections' %}">Paraffin sections</a> <br><a
+            href="{% url 'tissue_microarrays' %}">Tissue Micro Arrays</a></p>
 {% endblock %}
