--- a/templates/ctb/saved_searches.html
+++ b/templates/ctb/saved_searches.html
@@ -27,7 +27,7 @@
 {#{% endblock %}#}
 
 {% block content %}
-    <div class="container pt-3">
+    <div class="container py-3">
         <div class="row">
             <div class="col">
                 <div class="border rounded bg-light p-3">
