--- a/templates/ctb/search_clinical.html
+++ b/templates/ctb/search_clinical.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container py-3">
         <div class="row">
             <div class="col-8">
                 <div class="border rounded bg-light p-3">
