--- a/templates/ctb/search_tissue_samples.html
+++ b/templates/ctb/search_tissue_samples.html
@@ -25,7 +25,7 @@
 {#{% endblock %}#}
 
 {% block content %}
-    <div class="container pt-3">
+    <div class="container py-3">
         <div class="row">
             <div class="col-md-8">
                 <div class="bg-light border rounded p2">
