--- a/templates/ctb/driver_search_facility.html
+++ b/templates/ctb/driver_search_facility.html
@@ -230,7 +230,7 @@
                     <div class="d-grid gap-2 col mx-auto">
                         <a class="btn btn-secondary" href="{% url 'search_tissue_samples' %}"><i
                                 class="fa-solid fa-left-long"></i> Back to Biosample Search Facility</a>
-                        <a class="btn btn-primary" href="{% url 'search_clinical' %}"><i
+                        <a class="btn btn-primary" href="{% url 'clinical_search_facility' %}"><i
                                 class="fa-solid fa-magnifying-glass"></i> Perform Another Clinical Search</a>
                         <a class="btn btn-outline-dark" href="{% static 'files/application-form.doc' %}"><i
                                 class="fa-solid fa-download"></i> Download Application Form</a>
