--- a/templates/ctb/search_tissue_samples.html
+++ b/templates/ctb/search_tissue_samples.html
@@ -321,7 +321,7 @@
 
                     <div class="d-grid gap-2 col mx-auto">
                         <a class="btn btn-outline-secondary" href="{% static 'files/application-form.doc' %}"><i class="fa-solid fa-download"></i> Download Application Form</a>
-                        <a class="btn btn-primary" href="{% url 'search_clinical' %}"><i class="fa-solid fa-right-long"></i> Proceed to Clinical Search</a>
+                        <a class="btn btn-primary" href="{% url 'clinical_search_facility' %}"><i class="fa-solid fa-right-long"></i> Proceed to Clinical Search</a>
                     </div>
                 </div>
             </div>
