--- a/templates/accounts/account/verification_sent.html
+++ b/templates/accounts/account/verification_sent.html
@@ -10,12 +10,12 @@
             <div class="card panel-default">
                 <form action="{% url 'account_email' %}" class="email_list" method="post">
                 {% csrf_token %}
-                    <h3 class="card-title">{% trans "Verify Your E-mail Address" %}</h3>
+                    <div class="card-header"><h4>{% trans "Verify Your E-mail Address" %}</h4></div>
                     <div class="card-body">
                         <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process.{% endblocktrans %}</p>
                         <p>If you do not receive the e-mail within a few minutes, check your spam folder. Registration confirmation e-mails are often flagged as potential spam.</p>
                         <hr/>
-                        <h4>E-mail hasn't arrived and isn't in your spam folder?</h4>
+                        <strong>E-mail hasn't arrived and isn't in your spam folder?</strong>
                         <p>If you <b><a href="{% url 'account_login' %}">attempt to sign in</a></b> using the password
                             you specified when registering, your verification email will be re-sent.</p>
                         <p><b>Please Note:</b> Verification e-mails will only be sent once every three (3) minutes. Additional
