--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -15,7 +15,7 @@
             <td>{{ saved_search.type }}</td>
             <td>{{ saved_search.results }} Cases</td>
             <td>{{ saved_search.proceed }}</td>
-            <td><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
+            <td class="text-center"><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
         </tr>
     {% endfor %}
     </tbody>
